@@ -34,6 +34,7 @@
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
+                        <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -80,18 +81,6 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
-            <scope>compile</scope>
-        </dependency>
 
     </dependencies>
 
